# econ.simulator

./: .gitignore  Dockerfile  README.md  code_formatter.bash  code_formatter.bat  code_formatter.sh  docker-compose.yml  pyproject.toml  requirements.txt  tmp.txt  tmp_debug_run_tick.py
config/: dev.env  docker.env  llm.env.example  world_settings.yaml
configs/: env.yaml
docs/: STRUCTURE.md  data_storage.md  deployment.md  econ_design_implementation_audit.md  info.md
econ_sim/: __init__.py  env.py  main.py  player.py
examples/: register_attach_demo.py
scripts/: _pp_runner.py  _reg_runner.py  _reg_runner_debug.py  _sandbox_runner.py  _test_pool_recreate.py  attach_all_user_scripts.py  debug_exec_logic.py  debug_goods_only.py  debug_inspect_tick.py  debug_run_tick.py  dev_start.sh  diagnose_baseline_decisions.py  diagnose_household_sync.py  quick_issue_check.py  run_simulation.py  run_smoke_test.py  seed_baseline_scripts.py  seed_test_world.py  verify_homepage_count.py
tests/: TESTING.md  conftest.py  run_llm_tests.py  test_auth.py  test_bond_coupons.py  test_bond_market.py  test_bond_maturity.py  test_central_bank_omo.py  test_composite_store.py  test_data_access.py  test_deposit_reconciliation.py  test_education_settlement.py  test_finance_market.py  test_gdp_calculation.py  test_gdp_compute.py  test_gdp_end_to_end.py  test_gdp_tick_logic.py  test_goods_market.py  test_goods_market_and_utility.py  test_government_issuance_plan.py  test_government_transfers.py  test_labor_market.py  test_macro_persistence.py  test_market_tick_flow.py  test_new_logic_smoke.py  (+11 more)
(+137 files in other folders)
