[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-sim"
version = "0.1.0"
description = "Macro-economic modular simulation engine"
authors = [{name = "Cecilia Guo", email = "ceciliaguo@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["econ_sim"]
